Change Log

20180515 SCL
- implement $F5 to simulate front panel short press
- fix SAFETY BUG: don't let $SC override over temperature throttling
	-> during over temperature, $SC will not be allowed to increase
	volatile current capacity
- fix SAFETY BUG: don't let $SC override PP max ampacity
	
20180417 SCL
- fix compile errors when no GFI and ADVPWR. Must also undef UL_COMPLIANT,
	GFI_SELFTEST, AUTOSVCLEVEL
	
20180406 SCL
- fix compile error when AMMETER not defined
	
20180404 SCL
- get rid of deprecated/superfluous PP_TABLE_TESLA
- don't let delay timer override EVSE_STATE_DISABLED
	
D4.13.0 20180403 SCL
- revert change from D4.12.0: delay timer would always wait for EV finish charging before ending.
  -> timer will go to sleep at end of specified time window unless charge or time limit set -> charge or time limit will still override timer end.
- cleanup of time/charge limit zeroing code

	
20180328 SCL
- fixed bug: $ST command would clear timer instead of setting it if all
	4 parameters had leading zeros
	e.g. $ST 01 05 02 01
	
20180323 SCL
- added PERIODIC_LCD_REFRESH_MS code for Glyn Hudson, currently disabled
  -> redraw of LCD at periodic intervals, in case it gets corrupted
  -> was needed for him to get past CE EMC testing
	
20180313 SCL
- merge PR#83 THREEPHASE from Glyn Hudson
- related code cleanup
	
D4.12.3 20180209 SCL
- display HIGH TEMP and turn LCD red during over temp event and keep display that way until button press or EV disconnected. No change to display during overtemp panic, which causes hard fault 
	
D4.12.2 20180206 SCL
- revamp time limit code to base on seconds instead of millis(). time limit
	fix in D4.12.1 was completely wrong. in existing code time limit was
	getting reset every time entering sleep state
	
D4.12.1 20180206 SCL
BUGGY DO NOT USE
- time limit - used to be total length of charge session
	-> now, setting *extends* total charge session time
- charge limit - used to be total kWh of charge session